@@ -1,5 +1,13 @@
 2008-01-17  Mario Sanchez Prada  <msanchez@maemo.org>
 
+	* src/update-notifier.c (UpdateNotifierPrivate): Added a new field
+	to keep track of the display state (N79304).
+	(update_notifier_init): Set callback for display events	(N79304).
+	(display_event_cb): Just update the new field (N79304).
+	(blink_icon): Don't blink if display is blank (N79304).
+
+2008-01-17  Mario Sanchez Prada  <msanchez@maemo.org>
+
 	Added a new APTCMD_DOWNLOAD_PACKAGE command, to allow downloading
 	packages separately from installing them from the frontend. Quite
 	useful for some checks, such as the check for enough free space,
